--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.databse-platform=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.show_sql=true
 spring.mvc.view.suffix=.jsp
 spring.mvc.view.prefix=/WEB-INF/jsp/
+logging.file.name=ServiceLogs.log
